--- a/homework/gohar_abrahamyan/html_css/html_secondtask/css/style.css
+++ b/homework/gohar_abrahamyan/html_css/html_secondtask/css/style.css
@@ -2,74 +2,74 @@
 	margin: 0 auto;
 	padding: 0;
 }
-body{
-	width: 960px;
-	height: 500px;
-	margin: 0 auto;
+.container-fluid {
+	width: 70%;
 }
-h1 {
+.header {
 	color: red;
 	margin: 40px 0 13px 0;
 	font-size: 20px;
 	font-family: Arial, Helvetica, sans-serif;
 }
 p{
-	font-size: 12px;
+	font-size: 11px;
 	font-family: Arial, Helvetica, sans-serif;
 	padding: 8px 0;
 	color: #2a0a50;
 }
-#leftblock {
-	width: 530px;
-	float: left;
-	padding-left: 10px;
-
-}
 #rightblock {
-	width: 365px;
-	height: 360px;
-	float: right;
-	margin: 85px 40px 0 0;
+	margin-top: 9%;
+}
+.form {
 	background:#f1f1f1;
+	padding: 5px 0 30px 0;
+	width: 80%;
+	box-sizing: border-box;
 }
 form {
-	margin: 30px;
+	margin: 25px;
 }
 label {
 	font-weight: bold;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 13px;
+	margin-top: 10px;	
 }
 #name {
-	width: 145px; 
+	width: 49%; 
 }
-#mail{
-	direction: rtl;
+#mail, #number, #address {
+	width: 100%;
+	height: 10%;
+	padding: 5px 20px;
+	margin: 0 auto;
+	display: inline-block;
+	border: 1px solid #ccc;
+	box-sizing: border-box;
 }
-#mail, #address {
-	width: 297px;
-}
-img {
-	margin-top: 5px;
-	float: left;
-}
-input {
-	margin: 5px 0 15px 0;
-	height: 25px;
-}
-
 #number {
-	width: 253px;
-	height: 27px;
-	margin-bottom: 3px;
+	padding-left: 35%
 }
-
+::placeholder {
+position:relative;
+left: 70%;
+}
+input::-ms-input-placeholder {
+  padding-left: 70%;
+}
 input[type=submit] {
-	width: 60px;
-	height: 25px;
+	margin-top: 10px;
+	padding: 4px 0;
+	width: 20%;
 	background-color: #5079fe;
 	color: white;
 	border: none;
-	border-radius: 4px;
-	float: right;
+	border-radius: 2px;
+	float: right;	
+}
+#country {
+	height: 22px;
+	position: absolute;
+	top: 56%;
+	border: none;
 }
