--- a/homework/tatev_martirosyan/html/task-1/css/style.css
+++ b/homework/tatev_martirosyan/html/task-1/css/style.css
@@ -1,20 +1,53 @@
-.reg_form {
-    margin: auto;
-    margin-top: 50px;
-    font-family: Andale Mono, monospace;
+.for_border {
+	width:60%;
+	border:2px solid silver;
+	margin:auto;
 }
-.reg_form,
+@media screen and (max-width: 600px) {
+.for_border{
+font-size:50%;
+font-weight:bold;
+}
 input {
-    width: 600px;
-    height: 30px;
+    margin:10px;
+    height: 3%;
 }
-.reg_form,
-img {
-    margin-left: 150px;
+input::placeholder {
+padding-left:5px;
+font-size:50%;
 }
 .btn {
-    width: 600px;
+font-weight:bold;
+font-size:50%;
+}
+}
+
+.reg_form {
+    margin: 10%;
+    font-family: Andale Mono, monospace;
+}
+input {margin:10px;
+    width: 90%;
+    height: 30px;
+}
+
+img {
+	width:50%;
+height:60%;
+    margin-left: 25%;
+}
+label {
+margin:10px;
+font-weight:bold;
+}
+input::placeholder {
+padding-left:20px;
+}
+
+.btn {margin:10px;
+    width: 90%;
     height: 40px;
     background-color: #006400;
     color: white;
+font-weight:bold;
 }
