--- a/homework/Narek_Iskandaryan/Html/task_2/css/Google.css
+++ b/homework/Narek_Iskandaryan/Html/task_2/css/Google.css
@@ -1,14 +1,12 @@
-body{
-    display: flex;
-    padding: 25px 45px;
+.container{
+    width: 80%;
+    margin-top: 25px;
 }
 .text{
-    width: 48%;
     font-size: 14px;
-    padding: 10px 90px;
+    padding: 10px 65px 0 40px;
 }
 .form{
-    width: 27%;
     margin-top: 50px;
     background-color: #f1f1f1;
     border: solid 1px #d2d1d1;
@@ -37,9 +35,9 @@ body{
     margin: 0px;
 }
 #submit{
-    width: 18%;
+    width: 21%;
     height: 30px;
-    margin-left: 74%;
+    margin-left: 71%;
     border-radius: 8px;
     color: white;
     background-color: rgb(79, 120, 252);
@@ -50,6 +48,7 @@ h1{
 }
 p{
     color: #5b4640;
+    margin-top: 20px;
 }
 a{
     text-decoration: none;
