--- a/homework/lilit_galstyan/html_css/simple_login_page/css/stl.css
+++ b/homework/lilit_galstyan/html_css/simple_login_page/css/stl.css
@@ -1,60 +1,34 @@
-#image{
-margin-left:37%;
-}
-
-
-#username{
-  border: 1px  solid #ccc;
-  border-radius: 1px;
-  margin-left: 30%;
-  margin-bottom: 0.5%;
-  margin-top: 0.5%;
-}
-
-
-
-#username{
-        padding-right:25%;
-        padding-bottom:1%;
-        padding-top:1%;
-}
-
-#password{
-
-  border: 1px  solid #ccc;
-  border-radius: 1px;
-  margin-left: 30%;
-  margin-bottom: 0.5%;
-  margin-top: 0.5%;
-}
-#password{
-        padding-right:25%;
-        padding-bottom:1%;
-        padding-top:1%;
-}
-
-
-.button{
-  color: white;
-  background-color: rgb(76,175,80) ;
-
-}
-
-.button{
-  border: 1px  solid #ccc;
-  border-radius: 1px;
-  margin-left: 30%;
-  margin-bottom: 0.5%;
-  margin-top: 0.5%;
-}
-
-.button{
-  padding-left:19%;
-  padding-right: 19%;
-  padding-bottom:1%;
-  padding-top:1%;
-}
-#data{
-margin-left: 30%;
-}
-
+    #img{
+	margin-left: 40%; 
+    }
+    #image{
+	width:40%;     
+    }
+    #form{
+        width:50%;
+    }
+    .input {
+        border: 1px  solid #ccc;
+        padding: 2% 2%;
+        text-align: left;
+        text-decoration: none;
+        display: inline-block;
+        margin: 1% 1%;
+        cursor: pointer;
+        width: 100%;
+        margin-left: 50%;
+    }
+    #button {
+        background-color: rgb(76,175,80) ;
+        color:white;
+        width: 104.5%;
+        text-align: center;
+        cursor: pointer;
+        margin-left: 50%;
+        border: 1px  solid #ccc;
+        padding: 2% 2%;
+	margin-top: 1%;
+    } 
+    #data{
+        margin-left: 50%;
+    }
