--- a/homework/tatev_martirosyan/html/task-2/css/style.css
+++ b/homework/tatev_martirosyan/html/task-2/css/style.css
@@ -19,7 +19,7 @@ a {
     color: blue;
     text-decoration: none;
 }
-#choose_gmail {
+.col-xs-4 {
     margin:2%;
     margin-top: 5%;
     background-color: #FFFFF0;
