--- a/homework/vahram_vanyan/html/task1/css/style.css
+++ b/homework/vahram_vanyan/html/task1/css/style.css
@@ -1,20 +1,25 @@
-/* * {
-    margin: 0;
-    padding: 0;
-} */
 body {
     background-color: rgb(252, 252, 240);
+    font-family: Arial, Helvetica, sans-serif;
 }
 .main  {
     box-sizing: border-box;
     margin: auto;
-    max-width: 680px;
+    max-width: 600px;
     border-radius: 3px;
     background-color: #f2f2f2;
     padding: 20px;
 }
 .img {
+    display: block;
     text-align: center;
+    margin-bottom: 10px;
+}
+.img img{
+    margin: auto;
+    width: 60%;
+    height: auto;
+    display: block;
 }
 
 form input{
