--- a/homework/lilit_galstyan/html_css/google_sign_in_page/css/style.css
+++ b/homework/lilit_galstyan/html_css/google_sign_in_page/css/style.css
@@ -1,93 +1,94 @@
 .button{
-        color: #4e4ec6;
-        text-decoration: none;
+	color: #4e4ec6;
+	text-decoration: none;
 }
-
-input[type=text], select {
-width: 100%;
-padding: 10px 20px;
-margin: 4% 0;
-display: inline-block;
-border: 1px solid #ccc;
-border-radius: 1px;
-box-sizing: border-box;
-}
-
 .datas{
-font-family: Gill Sans, sans-serif;
-font-size: 90%;
-
+	font-family: Gill Sans, sans-serif;
+	font-size: 90%;
 }
 
-
-#datas{
-background-color:rgb(241, 241, 241) ;
-
+#text{
+display: flex; 
+flex-direction: row; 
+width: 100%;
 }
-
 #second {
-  color: black;
-  border-radius: 1px;
-  margin-top: 4%;
-  margin-left: 7%;
-  background-color: #F2F2F2;
- }
-#second {
-  margin-right: 15%;
-  margin-bottom: 1%;
- }
-
-
- .text{
- font-family: Verdana, Geneva, sans-serif;
- font-size: 90%;
- color: #565656;
- margin-left: 10%;
- }
-
-
- .title{
- font-family: Verdana, Geneva, sans-serif;
- font-size: 130%;
- color: red;
- width: 50%;
- margin-left: 10%;
- }
-
+	display: inline-block;	
+	color: black; 
+	border-radius: 1px;
+	margin-left: 7%;
+	margin-top: 4%;
+	background-color: #F2F2F2;
+	margin-right: 10%;
+	margin-bottom: 1%;
+	padding-top: 2%;
+	padding-bottom: 2%;
+	padding-right:1%;
+	padding-left: 3%;
+	width:70%;
+	border: 1px solid #ccc;
+	border-radius: 1px;
+}
+.text{
+	font-family: Verdana, Geneva, sans-serif;
+	font-size: 90%;
+	color: #565656;
+	margin-left: 10%;
+}
+.title{
+	font-family: Verdana, Geneva, sans-serif;
+	font-size: 130%;
+	color: red;
+	width: 50%;
+	margin-left: 10%;
+}
 #mail{
-text-align: right;
-width:100%;
+	text-align: right;
+	width:62%;
+	border: 1px solid #ccc;
+	border-radius: 1px;
+	padding-top:1.5%;
+	padding-bottom:1.5%;
+	margin-top: 1%;
+	margin-bottom: 2%;
 }
 #name{
-width:49%;
+	width:30%;
+	border: 1px solid #ccc;
+	border-radius: 1px;
+	padding-top:1.5%;
+	padding-bottom:1.5%;
+	margin-bottom: 2%;
+	margin-top: 1%;
 }
-
 #submit{
-        border-radius:2px;
-        background-color: #2378F9;
-        color:white;
-        padding-top: 2.5%;
-        padding-bottom: 2.5%;
-        padding-right: 2%;
-        padding-left: 2%;
-        margin-left:80%;
-        border: none;
+	border-radius:2px;
+	background-color: #2378F9;
+	color: white;
+	padding-top: 1.5%;
+	padding-bottom: 1.5%;
+	padding-right: 2%;
+	padding-left: 2%;	
+	margin-top:1%;
+	margin-left:50%;
+	border: none;
+	text-align: center;
 }
-
-
 .phone{
-font-family: Gill Sans, sans-serif;
-font-size: 90%;
-
-
+	font-family: Gill Sans, sans-serif;
+	font-size: 90%;
 }
-
 #phone{
-background-image:url('https://image.flaticon.com/icons/svg/206/206744.svg');
-width:100%;
-background-position: 5%;
-background-size:7%;
-background-repeat:no-repeat;
-
+	background-image:url('https://image.flaticon.com/icons/svg/206/206744.svg');
+	width:62%;
+	background-position: 5%;
+	background-size:7%;
+	background-repeat:no-repeat;
+	border: 1px solid #ccc;
+	border-radius: 1px;
+	padding-top:1.5%;
+	padding-bottom:1.5%;
+	margin-top:1%;
+	margin-bottom: 2%;
 }
 
