--- a/homework/lilit_galstyan/html_css/google_sign_in_page/css/style.css
+++ b/homework/lilit_galstyan/html_css/google_sign_in_page/css/style.css
@@ -11,6 +11,7 @@
 display: flex; 
 flex-direction: row; 
 width: 100%;
+margin-left:5%;
 }
 #second {
 	display: inline-block;	
@@ -19,13 +20,12 @@ width: 100%;
 	margin-left: 7%;
 	margin-top: 4%;
 	background-color: #F2F2F2;
-	margin-right: 10%;
+	margin-right: 15%;
 	margin-bottom: 1%;
 	padding-top: 2%;
 	padding-bottom: 2%;
-	padding-right:1%;
-	padding-left: 3%;
-	width:70%;
+	padding-right:1.5%;
+	padding-left: 1.5%;
 	border: 1px solid #ccc;
 	border-radius: 1px;
 }
@@ -44,35 +44,36 @@ width: 100%;
 }
 #mail{
 	text-align: right;
-	width:62%;
+	width:98%;
 	border: 1px solid #ccc;
 	border-radius: 1px;
 	padding-top:1.5%;
 	padding-bottom:1.5%;
 	margin-top: 1%;
-	margin-bottom: 2%;
+	margin-bottom: 3%;
 }
 #name{
-	width:30%;
+	width:47%;
 	border: 1px solid #ccc;
 	border-radius: 1px;
 	padding-top:1.5%;
 	padding-bottom:1.5%;
-	margin-bottom: 2%;
+	margin-bottom: 3%;
 	margin-top: 1%;
 }
 #submit{
 	border-radius:2px;
 	background-color: #2378F9;
 	color: white;
-	padding-top: 1.5%;
-	padding-bottom: 1.5%;
-	padding-right: 2%;
-	padding-left: 2%;	
+	padding-top: 2%;
+	padding-bottom: 2%;	
 	margin-top:1%;
-	margin-left:50%;
+	width: 20%;
+	margin-left:80%;
 	border: none;
 	text-align: center;
+        font-size:80%;
+	margin-top: 2%;
 }
 .phone{
 	font-family: Gill Sans, sans-serif;
@@ -80,7 +81,7 @@ width: 100%;
 }
 #phone{
 	background-image:url('https://image.flaticon.com/icons/svg/206/206744.svg');
-	width:62%;
+	width:98%;
 	background-position: 5%;
 	background-size:7%;
 	background-repeat:no-repeat;
@@ -89,6 +90,6 @@ width: 100%;
 	padding-top:1.5%;
 	padding-bottom:1.5%;
 	margin-top:1%;
-	margin-bottom: 2%;
+	margin-bottom: 3%;
 }
 
