--- a/homework/Mariam_Am/html/task1/css/1.css
+++ b/homework/Mariam_Am/html/task1/css/1.css
@@ -16,7 +16,7 @@ body{
     padding: 25px 0 25px 25px;
 }
 .form input{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif; 
     width: 44%;
     height: 22px;
     margin: 4% 0px;
@@ -31,12 +31,11 @@ body{
     text-align: end;
 }
 #phone{
-    width: 75%;
+    width: 60%;
 }
 #country{
     font-family: Arial, Helvetica, sans-serif;
-    width: 17%;
-    height: 26px;
+    
 }
 #submit{
     width: 20%;
@@ -49,10 +48,7 @@ body{
 h1{
     
     color: #ff0000d1;
-    font-size: 21px;
-}
-p{
-    color: #5b4640;
+    font-size: 21ps;
 }
 a{
     text-decoration: none;
