--- a/homework/anna_mayilyan/javascript/login.css
+++ b/homework/anna_mayilyan/javascript/login.css
@@ -37,4 +37,16 @@ input[type=text]:focus, input[type=password]:focus {
 
 
 
+input[type=submit] {
+  width: 20%;
+  background-color: #80ccff;
+  color: black;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+
 
