--- a/homework/anna_mayilyan/javascript/login1.css
+++ b/homework/anna_mayilyan/javascript/login1.css
@@ -1,11 +1,9 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
- 
+
 }
 
-
-
-input[type=text], input[type=password] {
+input {
   width: 40%;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -13,30 +11,6 @@ input[type=text], input[type=password] {
   border: none;
   background: #e6faff;
 }
-
-
-
-
-
-
-	input[type=email]{
-  width: 40%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  display: inline-block;
-  border: none;
-  background: #e6faff;
-}
-
-
-input[type=text]:focus, input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
-}
-
-
-
-
 input[type=submit] {
   width: 20%;
   background-color: #80ccff;
@@ -47,6 +21,3 @@ input[type=submit] {
   border-radius: 4px;
   cursor: pointer;
 }
-
-
-
